java9, replace Arrays.asList with List.of